profilelist1exp/unpackaged/objects/OEM_Rapid_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Company_Name__r.Account_ID__c</formula>
        <inlineHelpText>This is the SFDC Account ID found in the account tab under &quot;Account Information&quot;</inlineHelpText>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Site__c</fullName>
        <formula>Company_Name__r.Site</formula>
        <label>Account Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info_for_Rejected_Requests__c</fullName>
        <label>Additional Info for Rejected Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>now()- CreatedDate</formula>
        <label># Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Close_Date__c</fullName>
        <label>Case Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier Expedites</fullName>
                </value>
                <value>
                    <fullName>Critical Order Status</fullName>
                </value>
                <value>
                    <fullName>Export Certificates</fullName>
                </value>
                <value>
                    <fullName>Customer Care Esclation</fullName>
                </value>
                <value>
                    <fullName>Quality - GOE</fullName>
                </value>
                <value>
                    <fullName>Tech Support Esclation (SPOC)</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>SKU Issues</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Delete*****Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OEM Rapid Responses</relationshipLabel>
        <relationshipName>Rapid_Responses1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Company_Name__r.Account_Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>Case_Close_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Performance_Report__c</fullName>
        <label>Delivery Performance Report</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alpha SKU</fullName>
                </value>
                <value>
                    <fullName>SKU EOL</fullName>
                </value>
                <value>
                    <fullName>Cost Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business_Affected__c</fullName>
        <label>Line of Business Affected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Desktops</fullName>
                </value>
                <value>
                    <fullName>Notebooks</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Precision WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_of_Countries__c</fullName>
        <label>List of Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guernsey</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Isle of Man</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Lebanon</fullName>
                </value>
                <value>
                    <fullName>Liechtenstein</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malta</fullName>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                </value>
                <value>
                    <fullName>Morocco</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Oman</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_of_Customer_Numbers__c</fullName>
        <label>List of Customer Numbers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MWD_Ref_No__c</fullName>
        <label>MWD Ref.No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Operations_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OEM Operations Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OEM_Rapid_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OEM_RR_Contact__c</fullName>
        <label>OEM RR Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OEM_Status__c</fullName>
        <label>OEM Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Order_Report__c</fullName>
        <label>Open Order Report</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Performance Report</fullName>
                </value>
                <value>
                    <fullName>Service TAG</fullName>
                </value>
                <value>
                    <fullName>SLA Management</fullName>
                </value>
                <value>
                    <fullName>List of Customer Numbers</fullName>
                </value>
                <value>
                    <fullName>MDR Report</fullName>
                </value>
                <value>
                    <fullName>Purchase Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <inlineHelpText>This is your 9 digit order number</inlineHelpText>
        <label>Order Number/Customer Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_Attach_Photo__c</fullName>
        <label>Please Attach Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rapid_Response_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rapid Response Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABU</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Management__c</fullName>
        <label>SLA Management</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_TAG__c</fullName>
        <label>Service TAG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_of_Issue__c</fullName>
        <label>Summary of Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Request__c</fullName>
        <label>Summary of Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <formula>Company_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Cert_Required__c</fullName>
        <label>Type of Cert Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decleration of Conformity</fullName>
                </value>
                <value>
                    <fullName>Certificate of Origin</fullName>
                </value>
                <value>
                    <fullName>None of the Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OEM Rapid Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>RP NUM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Rapid Responses</pluralLabel>
    <recordTypes>
        <fullName>Carrier_Expedites</fullName>
        <active>true</active>
        <description>RRT engagement with carrier - Use this for Next day delivery, POD request, missed ETA, missing boxes to carrier hub - SLA to first response is 4 Hours</description>
        <label>Carrier Expedites</label>
    </recordTypes>
    <recordTypes>
        <fullName>Critical_Order_Status</fullName>
        <active>true</active>
        <description>For Critical updates on order - Use this if is there is a part shortage, order stuck in production, urgent customer requirement - SLA to first response is 4 Hours</description>
        <label>Critical Order Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care_Escalation</fullName>
        <active>true</active>
        <description>Escalation path once MWD has been logged - Use this If you have not had your ticket resolved within customer care - SLA to first response is 4 Hours</description>
        <label>Customer Care Escalation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Export_Certificates</fullName>
        <active>true</active>
        <description>Documentation required by customers including Customer tariff numbers, CE Declarations of conformities, ROHS, REACH statements, HTS codes, WEEE, Certificates of Origin - SLA to first response is 4 Hours</description>
        <label>Export Certificates</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>if your support request is not listed then please provide as much information as possible - SLA to first response is 4 Hours</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_GOE</fullName>
        <active>true</active>
        <description>Factory Issues - Provide details of issue and we will work to resolve - SLA to first response is 4 Hours</description>
        <label>Quality GOE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reporting</fullName>
        <active>true</active>
        <description>Reports for customer/account team - Reports include Order status, Service Tag/Warranty, shipping and delivery performance (SLA), service history, purchase history and IBR - SLA to first response is 4 Hours</description>
        <label>Reporting</label>
    </recordTypes>
    <recordTypes>
        <fullName>SKU_Issues</fullName>
        <active>true</active>
        <description>If you need support with  SKU’s issues - We can find the correct contact to help with any SKU issues - SLA to first response is 4 Hours</description>
        <label>SKU Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_support_Escalations_SPOC</fullName>
        <active>true</active>
        <description>Tech Support - Provide details of issue and we will work to resolve - SLA to first response is 4 Hours</description>
        <label>Tech support Escalations(SPOC)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Error_Reject_Message</fullName>
        <active>false</active>
        <errorConditionFormula>Request_Rejected__c == True &amp;&amp; ISPICKVAL(OEM_Status__c, &quot;Fixed&quot;)</errorConditionFormula>
        <errorMessage>This request cannot be rejected as this has already been fixed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Status</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT (ISPICKVAL(OEM_Status__c, &quot;New&quot;))</errorConditionFormula>
        <errorDisplayField>OEM_Status__c</errorDisplayField>
        <errorMessage>New OEM Rapid Response record shall always be in &quot;New&quot; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OEM_Closed_status</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( OEM_Status__c, &quot;Closed&quot;) &amp;&amp;  Request_Rejected__c == False &amp;&amp; CreatedBy.Username &lt;&gt; $User.Username &amp;&amp; NOT($Permission.OEM_App_visibility)</errorConditionFormula>
        <errorMessage>Only Requestor can Close the Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OEM_Status_Control3</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(OEM_Status__c),&quot;In Progress&quot;)&amp;&amp; ISPICKVAL(OEM_Status__c, &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>OEM Record cannot be closed when status is &quot;In Progress&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OEM_status_control</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(OEM_Status__c),&quot;Closed&quot;) &amp;&amp; ISPICKVAL(OEM_Status__c, &quot;In Progress&quot;)</errorConditionFormula>
        <errorMessage>Once Closed, OEM status cannot be &quot;In Progress&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OEM_status_control2</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL(PRIORVALUE(OEM_Status__c),&quot;Closed&quot;),ISPICKVAL(PRIORVALUE(OEM_Status__c),&quot;In Progress&quot;)) &amp;&amp; ISPICKVAL(OEM_Status__c, &quot;New&quot;)</errorConditionFormula>
        <errorMessage>OEM status cannot revert back to &quot;New&quot; once Request is &quot;In Progress&quot; OR &quot;Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PM_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Title==&quot;OEM_SR&quot; || $User.Title==&quot;OEM_AE&quot; ,ISPICKVAL(OEM_Status__c, &quot;In Progress&quot;))</errorConditionFormula>
        <errorMessage>The sales team can only change the status to &quot;New&quot; or &quot;Closed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RR_Reject</fullName>
        <active>true</active>
        <errorConditionFormula>Request_Rejected__c == True &amp;&amp; ISBLANK( Additional_Info_for_Rejected_Requests__c )</errorConditionFormula>
        <errorMessage>Additional information is mandatory if request is rejected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reject_status_control</fullName>
        <active>true</active>
        <errorConditionFormula>Request_Rejected__c == False &amp;&amp; PRIORVALUE(Request_Rejected__c)</errorConditionFormula>
        <errorMessage>You cannot Open a Rejected Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND($User.Title==&quot;OEM_PM&quot;,Request_Rejected__c == False, OR(ISPICKVAL(OEM_Status__c, &quot;New&quot;),ISPICKVAL(OEM_Status__c, &quot;Closed&quot;)))</errorConditionFormula>
        <errorMessage>Rapid Response team can only change the status to &quot;In Progress&quot;</errorMessage>
    </validationRules>
</CustomObject>